Fix media wrap bug on mobile

--- a/app/styles/Molecules/_media.scss
+++ b/app/styles/Molecules/_media.scss
@@ -26,7 +26,9 @@
   }
 }
 .Media-wrap {
-  padding-right: 100px;
+  @media #{$medium-up} {
+    padding-right: 100px;
+  }
 }
 .Media--voted {
   color: $gray--light;
